--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,7 +34,7 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 # db.default.driver=org.postgresql.Driver
-# db.default.url="jdbc:h2:mem:play"
+# db.default.url="jdbc:postgres://bsfkj5lthpsvimet.postgresql.clvrcld.net"
 # db.default.user=sa
 # db.default.password=""
 
