--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,7 +35,7 @@ application.langs="en"
 #
 # db.default.driver=org.postgresql.Driver
 # db.default.url="jdbc:postgres://bsfkj5lthpsvimet.postgresql.clvrcld.net"
-# db.default.user=sa
+# db.default.user="bsfkj5lthpsvimet"
 # db.default.password=""
 
 # Evolutions
