--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,7 +34,7 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgres://bsfkj5lthpsvimet.postgresql.clvrcld.net"
+db.default.url="jdbc:postgresql://bsfkj5lthpsvimet.postgresql.clvrcld.net"
 db.default.user="bsfkj5lthpsvimet"
 db.default.password="fbe55d11efa142a19976b007e1e6aeb9"
 
