--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,10 +33,14 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://bsfkj5lthpsvimet.postgresql.clvrcld.net"
-db.default.user="bsfkj5lthpsvimet"
-db.default.password="fbe55d11efa142a19976b007e1e6aeb9"
+%clevercloud.db.url=jdbc:mysql://{yourcleverdbhost}/{dbname}
+%clevercloud.db.driver=com.mysql.jdbc.Driver
+%clevercloud.db.user={yourcleveruser}
+%clevercloud.db.pass={yourcleverpass}
+# db.default.driver=org.postgresql.Driver
+# db.default.url="jdbc:postgresql://bsfkj5lthpsvimet.postgresql.clvrcld.net"
+# db.default.user="bsfkj5lthpsvimet"
+# db.default.password="fbe55d11efa142a19976b007e1e6aeb9"
 
 # Evolutions
 # ~~~~~
