--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,7 +33,7 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-%clevercloud.db.url=jdbc:mysql://{yourcleverdbhost}/{dbname}
+%clevercloud.db.url=jdbc:mysql://bt2k5h8l199i89dh.mysql.clvrcld.net
 %clevercloud.db.driver=com.mysql.jdbc.Driver
 %clevercloud.db.user={yourcleveruser}
 %clevercloud.db.pass={yourcleverpass}
