--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,8 +35,8 @@ application.langs="en"
 #
 %clevercloud.db.url=jdbc:mysql://bt2k5h8l199i89dh.mysql.clvrcld.net
 %clevercloud.db.driver=com.mysql.jdbc.Driver
-%clevercloud.db.user={yourcleveruser}
-%clevercloud.db.pass={yourcleverpass}
+%clevercloud.db.user=uja9j1thvvc34744
+%clevercloud.db.pass=0a9c577636914dd39de0c07dbf73d245
 # db.default.driver=org.postgresql.Driver
 # db.default.url="jdbc:postgresql://bsfkj5lthpsvimet.postgresql.clvrcld.net"
 # db.default.user="bsfkj5lthpsvimet"
