--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,7 @@
 # This is the main configuration file for the application.
 # ~~~
 
-%clevercloud.application.mode="development"
+%clevercloud.application.mode="dev"
 
 # Secret key
 # ~~~~~
