--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,14 +35,14 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-%clevercloud.db.url="jdbc:mysql://bt2k5h8l199i89dh.mysql.clvrcld.net"
-%clevercloud.db.driver="com.mysql.jdbc.Driver"
-%clevercloud.db.user="uja9j1thvvc34744"
-%clevercloud.db.pass="0a9c577636914dd39de0c07dbf73d245"
-# db.default.driver=org.postgresql.Driver
-# db.default.url="jdbc:postgresql://bsfkj5lthpsvimet.postgresql.clvrcld.net"
-# db.default.user="bsfkj5lthpsvimet"
-# db.default.password="fbe55d11efa142a19976b007e1e6aeb9"
+#%clevercloud.db.url="jdbc:mysql://bt2k5h8l199i89dh.mysql.clvrcld.net"
+#%clevercloud.db.driver="com.mysql.jdbc.Driver"
+#%clevercloud.db.user="uja9j1thvvc34744"
+#%clevercloud.db.pass="0a9c577636914dd39de0c07dbf73d245"
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://bsfkj5lthpsvimet.postgresql.clvrcld.net"
+db.default.user="bsfkj5lthpsvimet"
+db.default.password="fbe55d11efa142a19976b007e1e6aeb9"
 
 # Evolutions
 # ~~~~~
