--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,7 @@
 # This is the main configuration file for the application.
 # ~~~
 
-%clevercloud.application.mode=dev
+#%clevercloud.application.mode=dev
 
 # Secret key
 # ~~~~~
@@ -40,8 +40,8 @@ application.langs="en"
 #%clevercloud.db.user="uja9j1thvvc34744"
 #%clevercloud.db.pass="0a9c577636914dd39de0c07dbf73d245"
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://bsfkj5lthpsvimet.postgresql.clvrcld.net"
-db.default.user="bsfkj5lthpsvimet"
+db.default.url="postgres://u3u689r9gfi1tiha:fbe55d11efa142a19976b007e1e6aeb9@bsfkj5lthpsvimet.postgresql.clvrcld.net:5432/bsfkj5lthpsvimet"
+db.default.user="u3u689r9gfi1tiha"
 db.default.password="fbe55d11efa142a19976b007e1e6aeb9"
 
 # Evolutions
